--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@ node_modules/teeworlds/docs/examples/kill_on_freeze.js
 node_modules/teeworlds/docs/examples/chat_bot.js
 node_modules/teeworlds/docs/documentation.md
 node_modules/.package-lock.json
+src/all-analyze/logs/Away/log-172.233.16.217-8303.txt
+src/message-analyze/logs/Away/log-172.233.16.217-8304.txt
+src/all-analyze/logs/Away/log-172.233.16.217-8304.txt
+src/player-analyze/logs/Away/log-172.233.16.217-8303.txt
+src/player-analyze/logs/Away/log-172.233.16.217-8304.txt
