--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ src/message-analyze/logs/Away/log-172.233.16.217-8304.txt
 src/all-analyze/logs/Away/log-172.233.16.217-8304.txt
 src/player-analyze/logs/Away/log-172.233.16.217-8303.txt
 src/player-analyze/logs/Away/log-172.233.16.217-8304.txt
+src/servers/MyServers.json
