--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,9 @@ src/all-analyze/logs/Away/log-172.233.16.217-8304.txt
 src/player-analyze/logs/Away/log-172.233.16.217-8303.txt
 src/player-analyze/logs/Away/log-172.233.16.217-8304.txt
 src/servers/MyServers.json
+src/all-analyze/logs/BRA/log-172.233.25.72-8303.txt
+src/all-analyze/logs/BRA/log-172.233.25.72-8304.txt
+src/all-analyze/logs/BRA/log-172.233.25.72-8305.txt
+src/all-analyze/logs/BRA/log-172.233.25.72-8306.txt
+src/all-analyze/logs/BRA/log-172.233.25.72-8307.txt
+src/all-analyze/logs/BRA/log-172.233.25.72-8308.txt
