--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ src/bots/all-analyze/logs/BRA/log-172.233.25.72-8308.txt
 src/bots/player-analyze/logs/Away/log-172.233.16.217-8303.txt
 src/bots/player-analyze/logs/Away/log-172.233.16.217-8304.txt
 src/bots/message-analyze/logs/Away/log-172.233.16.217-8304.txt
+src/config/Mybot-identify.json
