--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "fregues-mp",
   "license": "EPL-2.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "run": "node src/multbot.js"
   },
   "dependencies": {
     "colors": "^1.4.0",
